# numeric-algebra

./: README.md  flatten_tex.py  pyproject.toml
common/: macros.tex
complex_analysis/handouts/: README.md
complex_analysis/hw1/: mapping_cos.pgf  plot_cos_mapping.py  report.tex
complex_analysis/hw4/: report.tex
numeric_algebra/: README.md  __init__.py
numeric_algebra/common/: __init__.py  gaussian_jordan_inv.py  mat_to_latex.py  typing.py
numeric_algebra/hw1/: __init__.py  report.tex
numeric_algebra/hw2/: __init__.py  exercise1.py
numeric_algebra/hw3/: __init__.py  calculate.py  cholesky.py  exercise2.py  output.txt  report.tex
numeric_algebra/hw4/: report.tex
