[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zju-math-courses-collection"
version = "0.1.0"
description = "A collection of mathematics courses homework and materials from ZJU"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["mathematics", "courses", "homework"]
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tzdata==2025.3",
]

[project.urls]
Repository = "https://github.com/AI1379/zju-math-courses-collection"
Issues = "https://github.com/AI1379/zju-math-courses-collection/issues"

[tool.setuptools]
packages = ["numeric_algebra"]
